--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
+streamlit==1.32.2
 tensorflow==2.12.0
-numpy
-joblib
+numpy==1.23.5
+joblib==1.3.2
 huggingface_hub==0.20.3
-scikit-learn
+scikit-learn==1.2.2
