--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit==1.32.2
-tensorflow==2.11.0  # ✅ Use a version supported on Streamlit Cloud (Python <= 3.10)
+tensorflow==2.12.0
 numpy==1.23.5
 joblib==1.3.2
 huggingface_hub==0.20.3
