--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-pip>=23.0
 streamlit==1.32.2
+tensorflow==2.12.0
 numpy==1.23.5
 joblib==1.3.2
 scikit-learn==1.2.2
-tensorflow==2.11.0
+Sastrawi
+pytypo
+plotly
+matplotlib
+seaborn
